Add bashate job nonvotingwq
Change-Id: I3d888ec621b50f6ac90d92c8f586ef2d577a780e

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -2,7 +2,9 @@
 - project:
     check:
       jobs:
-        - openstack-tox-linters
+        - openstack-tox-linters:
+            voting: false
     gate:
       jobs:
-        - openstack-tox-linters
+        - openstack-tox-linters:
+            voting: false
