--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,13 @@ commands =
             \( -name .tox -prune \)         \
             -o -type f -name '*.yaml'       \
             -print0 | xargs -0 yamllint"
+  bash -c "find {toxinidir}          \
+         -not \( -type d -name .?\* -prune \) \
+         -type f                              \
+         -not -name \*~                       \
+         -not -name \*.md                     \
+         -name \*.sh                          \
+         -print0 | xargs -0 bashate -v"
 
 [testenv:venv]
 commands = {posargs}
