--- a/Dockerfile.centos73.TC-builder
+++ b/Dockerfile.centos73.TC-builder
@@ -116,6 +116,7 @@ RUN useradd -r -u $MYUID -g cgts -m $MYUNAME && \
     ln -s /home/$MYUNAME/.ssh /mySSH
 
 COPY toCOPY/finishSetup.sh /usr/local/bin
+COPY toCOPY/generate-cgcs-tis-repo /usr/local/bin
 COPY toCOPY/.inputrc /home/$MYUNAME/
 COPY toCOPY/.gitconfig /home/$MYUNAME/
 
