Clean up formatting to pass linters job and make it voting
Change-Id: I6e160137be0421880d5fb60b32098ecccc34c193

--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,12 @@ commands =
             -print0 | xargs -0 yamllint"
   bash -c "find {toxinidir}          \
          -not \( -type d -name .?\* -prune \) \
+         -not \( -type d -path {toxinidir}/toCOPY/cgcs_overlay -prune \) \
          -type f                              \
          -not -name \*~                       \
          -not -name \*.md                     \
          -name \*.sh                          \
-         -print0 | xargs -0 bashate -v"
+         -print0 | xargs -0 bashate -v -iE006"
 
 [testenv:venv]
 commands = {posargs}
