--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -2,9 +2,7 @@
 - project:
     check:
       jobs:
-        - openstack-tox-linters:
-            voting: false
+        - openstack-tox-linters
     gate:
       jobs:
-        - openstack-tox-linters:
-            voting: false
+        - openstack-tox-linters
