Mirror Tools: Git Repositories Required
The source for Tar Compressed files includes Git repositories to
be handled inside the container. Ask Yum to install via our
Dockerfile.

Change-Id: Ide346ca2baaf532b26a977c009275d7fd0d78268
Signed-off-by: Abraham Arce <abraham.arce.moreno@intel.com>

--- a/centos-mirror-tools/Dockerfile
+++ b/centos-mirror-tools/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /localdisk
 #    echo -e "export http_proxy=$http_proxy\nexport https_proxy=$https_proxy\n\
 #export ftp_proxy=$ftp_proxy" >> /root/.bashrc
 
-RUN yum install -y epel-release sudo vim-enhanced net-tools \
+RUN yum install -y epel-release sudo vim-enhanced net-tools git \
         /usr/bin/yumdownloader rpm-build rpm-sign deltarpm wget bind \
         bind-utils && rm /etc/yum.repos.d/CentOS-Sources.repo \
         /etc/yum.repos.d/epel.repo
