fixing namefile running make build
Change-Id: I201d40ccbb48c09d5cbb58eb4435d570b824f451
Signed-off-by: Felipe de Jesus Ruiz Garcia <felipe.de.jesus.ruiz.garcia@intel.com>

--- a/Dockerfile.centos73.TC-builder
+++ b/Dockerfile.centos73.TC-builder
@@ -117,7 +117,7 @@ RUN useradd -r -u $MYUID -g cgts -m $MYUNAME && \
 
 COPY toCOPY/finishSetup.sh /usr/local/bin
 COPY toCOPY/generate-cgcs-tis-repo /usr/local/bin
-COPY toCOPY/generate-cgcs-centos-repo /usr/local/bin
+COPY toCOPY/generate-cgcs-centos-repo.sh /usr/local/bin
 COPY toCOPY/.inputrc /home/$MYUNAME/
 COPY toCOPY/.gitconfig /home/$MYUNAME/
 
