DO NOT MERGE: I'm playing with zuul
Change-Id: I2d069279495b0a62635813cee28b8a164474ecc3
Signed-off-by: Erich Cordoba <erich.cordoba.malibran@intel.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,6 +3,7 @@
     check:
       jobs:
         - openstack-tox-linters
+        - stx-dependency-checker
     gate:
       jobs:
         - openstack-tox-linters
