DO NOT MERGE: I'm playing with zuul
Change-Id: I2d069279495b0a62635813cee28b8a164474ecc3
Signed-off-by: Erich Cordoba <erich.cordoba.malibran@intel.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,8 +1,16 @@
 ---
+- job:
+    name: stx-dependency-checker
+    description: |
+      Verifies that all references to src.rpm already exists in the
+      stx-tool repository
+    run: playbooks/stx-dependency-checker/run.yaml
+
 - project:
     check:
       jobs:
         - openstack-tox-linters
+        - stx-dependency-checker
     gate:
       jobs:
         - openstack-tox-linters
