DO NOT MERGE: I'm playing with zuul
Change-Id: I2d069279495b0a62635813cee28b8a164474ecc3
Signed-off-by: Erich Cordoba <erich.cordoba.malibran@intel.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,6 +3,9 @@
     check:
       jobs:
         - openstack-tox-linters
+        - run-test-command:
+            vars:
+              test_command: 'centos-mirror-tools/testing-zuul.sh'
     gate:
       jobs:
         - openstack-tox-linters
