[RFC] Reno: Release Notes Management
Reno is a release notes manager...

Change-Id: I7891d49a4957165535d00d5cc436f3d97d54508c
Signed-off-by: Abraham Arce <abraham.arce.moreno@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ localrc
 toCOPY/.gitconfig
 centos-mirror-tools/logs/
 centos-mirror-tools/output/
+
+# Files created by releasenotes build
+releasenotes/build
