--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,7 @@ commands = {posargs}
 envdir = {toxworkdir}/venv
 commands = true
 whitelist_externals = true
+
+[testenv:releasenotes]
+basepython = python3
+commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
