--- a/tox.ini
+++ b/tox.ini
@@ -44,3 +44,11 @@ commands =
     rm -rf doc/build
     sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
 whitelist_externals = rm
+
+[testenv:releasenotes]
+basepython = python3
+deps = -r{toxinidir}/doc/requirements.txt
+commands =
+    rm -rf releasenotes/build
+    sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
+whitelist_externals = rm
