Add docs, releasenotes jobs
Also:
* Fix doc/build in .gitignore

Change-Id: Ibe9d298bcc76f023c0500038db55d8384f5ff731
Signed-off-by: Dean Troyer <dtroyer@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ centos-mirror-tools/logs/
 centos-mirror-tools/output/
 
 # Sphinx documentation
-docs/build/
+doc/build/
 
 # Release Notes documentation
 releasenotes/build
