Add docs, releasenotes jobs
Also:
* Use build-openstack-docs-pti job template for docs
* Use build-openstack-releasenotes job for release notes
  (We can't use the OpenStack releasenotes template as it includes
  publish jobs, stx needs its own)
* Add newnote tox environment as convenience for creating new release
  notes, re-using the releasenotes venv.
* Create a release summary note.
* Remove the unused 'true' tox environment.
* Fix doc/build in .gitignore

Change-Id: Ibe9d298bcc76f023c0500038db55d8384f5ff731
Signed-off-by: Dean Troyer <dtroyer@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -35,12 +35,6 @@ commands =
 [testenv:venv]
 commands = {posargs}
 
-[testenv:true]
-# Use same environment directory as venv to save space and install time
-envdir = {toxworkdir}/venv
-commands = true
-whitelist_externals = true
-
 [testenv:docs]
 basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
@@ -56,3 +50,9 @@ commands =
     rm -rf releasenotes/build
     sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 whitelist_externals = rm
+
+[testenv:newnote]
+# Re-use the releasenotes venv
+envdir = {toxworkdir}/releasenotes
+deps = -r{toxinidir}/doc/requirements.txt
+commands = reno new {posargs}
