hostdata-collectors: Engineering Tools Pip Dependency
The Engineering tools is meant to be installed as a patch, in order
to generate it we need pycryptodome installed via pip.

Change-Id: I12db8a227112fb0eb23047514a9f7ac539de629c
Signed-off-by: Abraham Arce <abraham.arce.moreno@intel.com>

--- a/Dockerfile.centos73
+++ b/Dockerfile.centos73
@@ -24,7 +24,7 @@ RUN yum install -y vim-enhanced openssl-devel gettext mongodb mongodb-server mar
 
 # pip installs
 RUN pip install python-subunit junitxml --upgrade && \
-    pip install tox --upgrade
+    pip install tox pycryptodome --upgrade
 
 # Install repo tool
 RUN curl https://storage.googleapis.com/git-repo-downloads/repo > /usr/local/bin/repo && \
