Add publish job for docs
Also set the theme to alabaster until starlingxdocs is ready

Change-Id: I291bef8384bcbdb6bc419dee0de1b4bcb4e2894f
Signed-off-by: Dean Troyer <dtroyer@gmail.com>
(cherry picked from commit d57fac03907233ed1806e834eea0fe79751d4bac)

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -10,3 +10,6 @@
       jobs:
         - build-openstack-releasenotes
         - openstack-tox-linters
+    post:
+      jobs:
+        - publish-stx-tox
