Add dep for golang in the build container
We would like to have dep for golang as part of the build to pull in
dependencies. This allows us to avoid checking in dependency package
in our code base and to pull in the dependencies when building.

Change-Id: Ifff8dab38aebdc5638909679b7bef8128c6a84a7
Signed-off-by: Jerry Sun <jerry.sun@windriver.com>

--- a/Dockerfile.centos73
+++ b/Dockerfile.centos73
@@ -29,3 +29,10 @@ RUN pip install python-subunit junitxml --upgrade && \
 # Install repo tool
 RUN curl https://storage.googleapis.com/git-repo-downloads/repo > /usr/local/bin/repo && \
     chmod a+x /usr/local/bin/repo
+
+# installing golang, dep, and setting paths
+RUN yum install -y golang
+ENV GOPATH="/usr/local/go"
+ENV PATH="${GOPATH}/bin:${PATH}"
+RUN mkdir -p ${GOPATH}/bin
+RUN curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
