--- a/Dockerfile.centos73
+++ b/Dockerfile.centos73
@@ -29,3 +29,8 @@ RUN pip install python-subunit junitxml --upgrade && \
 # Install repo tool
 RUN curl https://storage.googleapis.com/git-repo-downloads/repo > /usr/local/bin/repo && \
     chmod a+x /usr/local/bin/repo
+
+# installing golang, dep, and setting paths
+ENV GOPATH="/usr/local/go"
+ENV PATH="${GOPATH}/bin:${PATH}"
+RUN yum install -y golang; mkdir -p ${GOPATH}/bin; curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
