fix build-srpms edit failure in openssh/openldap
It is due to these packages need autoreconf support.
Add required package automake/autogen/libtool to solve it.

Closes-Bug: 1799160

Change-Id: I5c6c03a6b74e168d73f0fb054bd5ccab367e3a94
Signed-off-by: slin14 <shuicheng.lin@intel.com>

--- a/Dockerfile.centos73
+++ b/Dockerfile.centos73
@@ -8,7 +8,7 @@ RUN yum install -y epel-release && \
     anaconda anaconda-help anaconda-runtime bc python-psutil createrepo /usr/bin/yumdownloader \
     /usr/bin/mkisofs git quilt pax perl-CPAN gcc expat-devel syslinux udisks2 rpm-build rpm-sign deltarpm \
     python-deltarpm rpm-python cpanminus wget \
-    bind bind-utils squashfs-tools
+    bind bind-utils squashfs-tools automake autogen libtool
 
 # cpan modules, installing with cpanminus to avoid stupid questions since cpan is whack
 RUN cpanm --notest Fatal && \
