--- a/centos-mirror-tools/yum.conf.sample
+++ b/centos-mirror-tools/yum.conf.sample
@@ -22,7 +22,7 @@ reposdir=yum.repos.d
 # information.
 #  It is esp. important, to have correct metadata, for distributions like
 # Fedora which don't keep old packages around. If you don't like this checking
-# interupting your command line usage, it's much better to have something
+# interrupting your command line usage, it's much better to have something
 # manually check the metadata once an hour (yum-updatesd will do this).
 # metadata_expire=90m
 
